test/compile-fail/resolution/pub/in-non-visible-super/top.rhdl
mod a {
    mod b {
        pub(in super::super) struct c {}
    }
}
